Added switch user button and updated profile content

--- a/front-end/src/components/landing/landing.scss
+++ b/front-end/src/components/landing/landing.scss
@@ -19,6 +19,10 @@ Link a {
   font-weight: bold;
 }
 
+.intro-body button {
+  background-color: $color-primary;
+}
+
 .business, .volunteer {
   width: 40%;
   margin: 50px 0 0 0;
