--- a/front-end/src/components/landing/latest-projects.scss
+++ b/front-end/src/components/landing/latest-projects.scss
@@ -10,7 +10,7 @@
 }
 
 .latest-projects-container > h2:nth-child(1) {
-    font-size: 35px;
+  font-size: 35px;
 }
 
 .latest-projects {
@@ -19,6 +19,21 @@
   margin-top: 50px;
   height: auto;
 }
+
+.close {
+  visibility: hidden;
+  opacity: 0;
+  transform: translateY(100%);
+}
+
+.open {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity .5s ease-in, transform .5s ease-in;
+  transform: translateY(0);
+}
+
+
 
 @media only screen and (min-width: 320px) and (max-width: 700px){
   .project {
