--- a/front-end/src/components/landing/landing.scss
+++ b/front-end/src/components/landing/landing.scss
@@ -68,7 +68,7 @@ Link a {
 }
 
 .main-details {
-  background: url('../../../assets/fistbump.jpg') no-repeat content-box;
+  background: url('../../../assets/fistbump.jpg') no-repeat content-box center;
   background-size: cover;
   height: 530px;
   display: flex;
@@ -98,6 +98,78 @@ Link a {
   line-height: 25px;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 600px){
+//Mobile
+@media only screen and (min-width: 320px) and (max-width: 700px) and (orientation: portrait) {
+  .business, .volunteer {
+    margin: 25px 0 0 0;
+    width: 50%;
+  }
 
+  .business > p, .volunteer > p {
+    font-size: 14px;
+  }
+
+  .business > h2, .volunteer > h2 {
+    font-size: 20px;
+    margin: 10px 0 10px 0;
+  }
+
+  .intro-body button {
+    width: 90%;
+  }
+
+  .main-details {
+    margin: 25px 0 0 0;
+    height: 600px;
+  }
+
+  .about-container {
+    margin: 20px 0 0 0;
+    width: 75%;
+    height: 80%;
+    padding: 10px 0 10px 0;
+  }
+
+  .about-container p {
+    font-size: 14px;
+  }
+}
+
+//Mobile Landscape
+@media only screen and (min-width: 320px) and (max-width: 700px) and (orientation: landscape) {
+  .business, .volunteer {
+    margin: 15px 0 0 0;
+    width: 50%;
+  }
+
+  .main-details {
+    margin: 20px 0 0 0;
+    height: 600px;
+  }
+
+  .about-container {
+    margin: 20px 0 0 0;
+    height: 80%;
+    padding: 10px 0 10px 0;
+  }
+}
+
+//Tablet
+@media only screen and (min-width: 701px) and (max-width: 900px){
+  .business, .volunteer {
+    margin: 40px 0 0 0;
+    width: 50%;
+  }
+
+  .main-details {
+    margin: 40px 0 0 0;
+    height: 600px;
+  }
+
+  .about-container {
+    margin: 20px 0 0 0;
+    width: 75%;
+    height: 80%;
+    padding: 10px 0 10px 0;
+  }
 }
