--- a/front-end/src/components/profile/profile.scss
+++ b/front-end/src/components/profile/profile.scss
@@ -80,6 +80,9 @@
   background-color: $color-quaternary;
   color: $color-primary;
   font-size: 15px;
+  min-width: auto;
+  min-height: auto;
+  white-space: nowrap;
 }
 
 .profile-container button:hover {
@@ -103,4 +106,14 @@
 
 .closed-projects > h2  {
   margin: 50px 0 55px 0;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 700px){
+  .profile-details > * {
+    max-width: 100%;
+  }
+
+  .profile-buttons {
+    flex-wrap: wrap;
+  }
 }
