--- a/front-end/src/components/project-details/project-info.scss
+++ b/front-end/src/components/project-details/project-info.scss
@@ -33,3 +33,13 @@
   font-size: 16px;
   width: 190px;
 }
+
+@media only screen and (min-width: 320px) and (max-width: 700px){
+  .project-info {
+    flex-wrap: wrap;
+  }
+
+  .business-wrapper {
+    flex: 1 1;
+  }
+}
