Updated project card, profile component, project schema, project ID generation strategy (#108)
* Updated sign up buttons on landing page

* Connected new profile form to profile endpoint

* Updated sign up button in project infoto redirect to thank you

* Updated project card link path

* Updated profile edit action

* Updated login nav path back to original path

* Added middleware to persist Redux data in local storage

* Added owner_id column to project table schema

* Updated condition to display cards only when data object is populated

* Added prop type validation to project card

* Re-added package-lock.json file

* Added responsiveness to project cards and profile

* Removed obsolete asset

* Added responsiveness to project details

* Fixed package-json file name

* Updated package-lock file

* Updated project ID generation strategy

--- a/front-end/src/components/landing/latest-projects.scss
+++ b/front-end/src/components/landing/latest-projects.scss
@@ -23,7 +23,7 @@
 .close {
   visibility: hidden;
   opacity: 0;
-  transform: translateY(100%);
+  transform: translateX(-100%);
 }
 
 .open {
@@ -32,8 +32,6 @@
   transition: opacity .5s ease-in, transform .5s ease-in;
   transform: translateY(0);
 }
-
-
 
 @media only screen and (min-width: 320px) and (max-width: 700px){
   .project {
