--- a/front-end/src/components/profile/profile.scss
+++ b/front-end/src/components/profile/profile.scss
@@ -80,6 +80,9 @@
   background-color: $color-quaternary;
   color: $color-primary;
   font-size: 15px;
+  min-width: auto;
+  min-height: auto;
+  white-space: nowrap;
 }
 
 .profile-container button:hover {
@@ -89,10 +92,12 @@
 .open-projects, .closed-projects, .current-projects {
   flex-flow: row wrap;
   justify-content: space-around;
+  text-align: center;
 }
 
 .open-projects > h2, .current-projects > h2 {
   margin: 50px 0 55px 0;
+  width: 100%;
 }
 
 .closed-projects {
@@ -101,4 +106,14 @@
 
 .closed-projects > h2  {
   margin: 50px 0 55px 0;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 700px){
+  .profile-details > * {
+    max-width: 100%;
+  }
+
+  .profile-buttons {
+    flex-wrap: wrap;
+  }
 }
