--- a/front-end/src/components/profile/profile.scss
+++ b/front-end/src/components/profile/profile.scss
@@ -7,7 +7,8 @@
 
 .profile-info {
   width: 100%;
-  background-color: $color-accent;
+  //background-color: $color-accent;
+  background-image: linear-gradient(#808082, #ffffff);
 }
 
 .profile-container {
@@ -75,14 +76,11 @@
 }
 
 .profile-container button {
-  margin: 50px 10px 50px auto;
+  margin: 50px 10px 30px auto;
   border: none;
   background-color: $color-quaternary;
   color: $color-primary;
   font-size: 15px;
-  min-width: auto;
-  min-height: auto;
-  white-space: nowrap;
 }
 
 .profile-container button:hover {
@@ -91,13 +89,13 @@
 
 .open-projects, .closed-projects, .current-projects {
   flex-flow: row wrap;
-  justify-content: space-around;
-  text-align: center;
+  //justify-content: space-around;
 }
 
 .open-projects > h2, .current-projects > h2 {
-  margin: 50px 0 55px 0;
+  margin: 30px 0 45px 0;
   width: 100%;
+  text-align: center;
 }
 
 .closed-projects {
@@ -105,15 +103,39 @@
 }
 
 .closed-projects > h2  {
-  margin: 50px 0 55px 0;
+  margin: 30px 0 55px 0;
+  width: 100%;
+  text-align: center;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 700px){
-  .profile-details > * {
+// Mobile
+@media only screen and (min-width: 320px) and (max-width: 736px) and (orientation: portrait) {
+  .profile-details {
+    padding: 15px;
+  }
+
+  .profile-details div {
+    padding: 10px 0 10px 0;
+  }
+
+  .profile-details p, a, h4 {
+    padding: 0 5px 0 5px;
+  }
+
+  .profile-container {
+    padding: 0 0 0 0;
+  }
+
+  .profile-container button {
+    width: 140px;
+    margin: 30px 5px 30px 5px;
+  }
+
+  .profile-business-details {
     max-width: 100%;
   }
 
-  .profile-buttons {
-    flex-wrap: wrap;
+  .profile-business-desc {
+    max-width: 100%;
   }
 }
